--- a/LogisticRegressionData.Rmd
+++ b/LogisticRegressionData.Rmd
@@ -215,10 +215,23 @@ Interpretation:
     death by a factor of 1.026(95%(1.007-1.045)). Or, one year increase
     in age increases the OR of death by 2.6%(0.7%-4.5%).
 
+### ASSESSING GOODNESS OF FIT OF A MODEL
+
+-   There are no residuals in logistic regression as in linear/multiple
+    regression
+-   The [***Hosmer-Lemeshow test***]{.ul} is a statistical test for
+    goodness of fit for the logistic regression model. The data are
+    divided into a number of groups (ten groups is a good way to start).
+    The [***observed***]{.ul} and [***expected***]{.ul} number of cases
+    in each group is calculated and a Chi-squared statistic is
+    calculated based on some weighted sum of squares of the difference
+    between observed and expected in each group. The null hypothesis of
+    the test states that the model is a good fit to the data. A large
+    value of Chi-squared (with small p-value \< 0.05) indicates poor fit
+    and small Chi-squared values (p-values\>=0.05) are consistent with a
+    good logistic regression model fit.
 -   **The Hosmer-Lemeshow test** (p-value=0.27) for the goodness of fit
-    is consistent with a good fit of the model to the data (a p-value
-    less than 0.05 indicates a poor fit). The null hypothesis of the
-    test states that the model is a good fit to the data.
+    is consistent with a good fit of the model to the data.
 
 ### MULTIVARIABLE LOGISTIC REGRESSION
 
@@ -254,9 +267,8 @@ Interpretation:
     likely to die comparing to men in this cohort.
 
 -   The Hosmer-Lemeshow test (p-value=0.07) for the goodness of fit is
-    consistent with a good fit of the model to the data (a p-value less
-    than 0.05 indicate a poor fit). The null hypothesis of the test
-    states that the model is a good fit to the data.
+    consistent with a reasonably good fit of the model to the data (not
+    enough evidence to reject the null).
 
 ### PREDICTIONS AFTER FITTING A MULTIVARIABLE MODEL
 
@@ -306,10 +318,8 @@ ggplot(newdata3, aes(x = age_years, y = PredictedProb)) +
     in age increases the adjusted OR of death by 2.3%(0.4%-4.3%).
     [***The increase is irrespective of gender.***]{.ul}
 
-<!-- -->
-
 -   [***Multiplicative model***]{.ul} - testing a potential interaction
-    between age and gender. in other words, we ask the question as to
+    between age and gender. In other words, we ask the question as to
     whether the risk of death varies with age similarly across the two
     gender groups or there is evidence that might not be the case?
 
@@ -350,7 +360,8 @@ ggplot(newdata3, aes(x = age_years, y = PredictedProb)) + geom_ribbon(aes(ymin =
 ```
 
 -   There is no evidence to suggest that the risk of death varies
-    differently across the groups defined by gender.
+    differently across the groups defined by gender (p-value
+    corresponding to the interaction term is 0.401).
 
 #### Two factors as independent variables
 
@@ -395,9 +406,25 @@ head(newdata3)
 
 ```
 
--   [***Multiplicative model***]{.ul} - no interaction between age and
-    gender. The assumption is that the risk of death varies with age at
-    the same pace across the two groups defined by gender.
+-   Interpretation:
+
+    -   the intercept = 2.34=the ODDS (NOT RATIOS!) of death at the
+        bottom of both categories, i.e. in males and intervention group.
+
+    -   drug_f2 = 0.93(0.59,1.43)= the adjusted OR of death for placebo
+        vs. intervention. In the additive model this OR is similar
+        across gender groups.
+
+    -   sex_f2=0.34(0.15, 0.69)= the adjusted OR of death for women vs.
+        men. In the additive model this OR is similar across
+        intervention groups.
+
+-   [***Multiplicative model***]{.ul} - testing a potential interaction
+    between drug and gender. In other words, we ask the question as to
+    whether the OR of death for women vs. men is similar across
+    intervention groups. Alternatively, we ask the question as to
+    whether OR of death for placebo vs. intervention is similar across
+    gender groups.
 
 ```{r}
 #the only modified bit
@@ -436,11 +463,55 @@ head(newdata3)
 
 ```
 
+-   Interpretation of the output:
+
+    -   the intercept = 4.25=the ODDS (NOT RATIOS!) of death at the
+        bottom of both categories, i.e. in males and intervention group.
+
+    -   drug_f2 = 0.93(0.59,1.43)= the OR of death for placebo vs.
+        intervention [***in males***]{.ul}.
+
+    -   sex_f2=0.17(0.05, 0.49)= the adjusted OR of death for women vs.
+        men in the [***intervention group***]{.ul}.
+
+    -   drug_f2:drug_f2=3.96(0.86,20.5) the multiplicative effect of the
+        OR of death attributable to being in both female group and
+        placebo group.
+
+    -   the OR of death for placebo vs. intervention [***in
+        females***]{.ul} would be 0.1727476\*3.9612414
+
+    -   the OR of death for female vs. males [***in placebo***]{.ul}
+        would be 0.2689076\*3.9612414
+
+    -   predictions for [***risk***]{.ul} of death in each group are
+        displayed at the end of the panel.
+
 ### MODEL CHOICE and COMPARISON
 
--   AIC criterion
+-   How do we choose between two models which fit well? Which one is
+    better ?
 
--   Likelihood ratio test
+-   ***Akaike information criterion*** (***AIC***) is a measure of
+    relative quality of statistical models for a given set of data.
+
+    -   it has no meaning per se - just a number
+
+    -   only comparative - the smaller the AIC the better the model
+
+    -   It has the advantage that it can be applied for non-nested
+        models.
+
+-   Likelihood ratio test - produces a p-value.
+
+    -   Applicable to two nested models
+
+    -   It tests the null hypothesis that the two models are of equally
+        good fit to the data. The alternative states that the model with
+        a larger number of parameters is better.
+
+-   Both need to be applied for models which relay on a similar number
+    of observations.
 
 ```{r}
 AIC(logit_on_gender_drug, logit_on_gender_drug_inter)
@@ -479,7 +550,8 @@ GENERIC_TABLE
 
     -   independence of the observations
 
-    -   study design (cross sectional, survey or case control study)
+    -   study design (cross sectional, survey or case control study,
+        diagnostic tests)
 
     -   their interpretation depends on the context
 
@@ -577,6 +649,24 @@ mcnemar.test(epimatrix)
     poor agreement between the two diagnostic methods, hence confirming
     the highly significant McNemar test.
 
+### Measuring the association between an exposure and a Disease
+
+A case control-study:looked at the association between diabetes (the
+risk factor) and eye cataract (the disease) in 607 patients with
+cataract and in 2,011 patients free of cataract.
+
+```{r}
+epitable <- data.frame(Cataract_yes=c(55, 552),Cataract_no=c(84, 927))
+rownames(epitable) <- c("Diabetes_yes","Diabetes_no")
+epitable
+table2x2(epitable)
+
+```
+
+Given the case-control design - only the OR can be derived and
+interpreted. That is we cannot derive the absolute risk/odds of the
+disease in exposed or non-exposed group
+
 ### Measuring the Diagnostic Value of a Clinical Test
 
 -   In medical practice, assessing the diagnostic (prognostic) ability
@@ -593,6 +683,38 @@ mcnemar.test(epimatrix)
     numbers were observed. Thus, percentages can only be derived
     vertically.
 
+    ![](DiagnosticTests.png)
+
+-   We would expect the clinical test to be mostly negative in healthy
+    individuals. This can be measured by the specificity of the test
+    [***SP***]{.ul} = *d*/(*d* +b), the proportion of negative results
+    in healthy (nondiseased) subjects.
+
+-   In contrast, we would expect the clinical test to be predominantly
+    positive in diseased subjects. This can be measured by the
+    sensitivity of the test [***SE***]{.ul} = *a*/(*a* + *c*) the
+    proportion of positive results in diseased subjects.
+
+-   The positive predictive value ([***PPV***]{.ul}) of the test which
+    measures the proportion (probability) of diseased subjects among
+    those with a positive test cannot simply be derived from the table
+    or from the specificity and sensitivity. Indeed, as column totals
+    have been fixed, numbers cannot be divided horizontally as indicated
+    before; thus, *PPV* is not equal to *a*/(*a* + *b*). To compute
+    *PPV*, one needs to know the prevalence (frequency) of the disease
+    $\pi$ in the population.
+
+    $$PPV=\frac{\pi\times SE}{\pi\times SE + (1-\pi)\times (1-SP)}$$
+
+-   Similarly, the negative predictive value ([***NPV***]{.ul}) is
+    defined as the proportion of subjects free of the disease among
+    those with a negative test. It should be emphasized that *NPV* is
+    not given by *c*/(*c* + *d*), but rather by the formula:
+
+    $$NPV=\frac{(1-\pi)\times SP}{(1-\pi)\times SP +  \pi \times (1-SE)}$$
+
+-   Many pieces of software, including R, disregard disease prevalence
+
 ```{r}
 epitable <- data.frame(DiabetesNo=c(461, 49),DiabetesYes=c(14, 56))
 rownames(epitable) <- c("TestNegative","TestPositive")
@@ -603,20 +725,6 @@ dat <- as.table(matrix(c(461, 49,14, 56), nrow = 2, byrow = TRUE))
 dat
 epi.tests(dat, conf.level = 0.95)
  
-```
-
-### Measuring the association between an exposure and a Disease
-
-A case control-study:looked at the association between diabetes (the
-risk factor) and eye cataract (the disease) in 607 patients with
-cataract and in 2,011 patients free of cataract.
-
-```{r}
-epitable <- data.frame(Cataract_yes=c(55, 552),Cataract_no=c(84, 927))
-rownames(epitable) <- c("Diabetes_yes","Diabetes_no")
-epitable
-table2x2(epitable)
-
 ```
 
 ### Assessment of Binary Classifier with Visualization
@@ -639,9 +747,12 @@ measure <- measureit(score = score, class = class, measure = c("ACC", "SENS", "F
 names(measure)
 
 plot(measure$ACC~measure$Cutoff, type = "l")
-plot(measure$ACC~measure$Cutoff, type = "l")
 
 ```
+
+### Area under the ROC curve -- assessing discrimination in logistic regression
+
+![](ROC_figure.png){width="662"}
 
 ```{r}
 logistic.model <- glm(as.factor(dtest)~ chol+age+bmi, data =mydata_diabetes, family = "binomial")
@@ -667,8 +778,7 @@ lines(rocit_non$TPR~rocit_non$FPR, col = 4, lwd = 2)
 legend("bottomright", col = c(1,2,4), c("Empirical ROC", "Binormal ROC", "Non-parametric ROC"), lwd = 2)
 ```
 
-## Area under the ROC curve -- assessing discrimination in logistic regression
-
+###  Simulating a poor discrimination
 ```{r}
 set.seed(34535)
 n <- 1000
@@ -681,6 +791,7 @@ roccurve <- roc(y ~ predpr)
 plot(roccurve)
 ```
 
+###  Simulating a good discrimination
 ```{r}
 set.seed(34535)
 n <- 1000
